--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             <h1 class="title hero__title">Прикоснитесь к&nbsp;прекрасному</h1>
             <p class="descr hero__descr">
               Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что реализация
-              намеченных плановых заданий создаёт предпосылки для новых<br />
+              намеченных плановых заданий создаёт предпосылки для новых
               предложений.
             </p>
             <a href="#contacts" class="hero__btn js-scroll-link"
