--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/choices.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="js/simplebar.js"></script>
+    <script defer src="js/swiper-bundle.min.js"></script>
+    <script defer src="js/choices.min.js"></script>
+    <script defer src="js/modal.js"></script>
+    <script defer src="js/accordion.js"></script>
+    <script defer src="js/popper.js"></script>
+    <script defer src="js/tippy.js"></script>
+    <script defer src="js/just-validate.min.js"></script>
+    <script defer src="js/inputmask.min.js"></script>
+    <script defer src="js/script.js"></script>
   </head>
   <body>
     <header class="header">
@@ -2537,16 +2547,6 @@
         </ul>
       </div>
     </footer>
-    <script src="js/simplebar.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/choices.min.js"></script>
-    <script src="js/modal.js"></script>
-    <script src="js/accordion.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/tippy.js"></script>
-    <script src="js/just-validate.min.js"></script>
-    <script src="js/inputmask.min.js"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-    <script src="js/script.js"></script>
+    <script defer src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
   </body>
 </html>
