--- a/index.html
+++ b/index.html
@@ -2479,7 +2479,7 @@
             <a
               href=""
               class="footer-social__link"
-              aria-label="наша страницу в vkontakte"
+              aria-label="наша страница в vk"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -2499,7 +2499,7 @@
             <a
               href=""
               class="footer-social__link"
-              aria-label="наша страницу в instagram"
+              aria-label="наша страница в inst"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -2527,7 +2527,7 @@
             <a
               href=""
               class="footer-social__link"
-              aria-label="наша страницу в facebook"
+              aria-label="наша страница в fb"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
